[package]
name = "proxima"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
color-eyre = "0.6"
hudsucker = "0.24"
rand = "0.10"
rcgen = "0.14"
reqwest = { version = "0.13", features = ["socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = "2.5"

[dev-dependencies]
mockito = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
